tools/tests/errors/surf_lib_17.ki
# fromhex of an odd-length hex string must throw.
discard fromhex("abc")
